# charging-cpp

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  dbschema.sql
backend/: main.cpp
backend/db/: db.cpp  db.h
backend/rest/: charge.cpp  charge.h  charging.cpp  charging.h  management.cpp  management.h
backend/test/: embd.cpp  test.cpp
backend/utils/: cache.cpp  cache.h  hash.cpp  hash.h  validate.cpp  validate.h
esp32_client/: esp32_client.ino  esp32_client_2.cpp
frontend/: app.js  index.html  styles.css
